udpsrc: fix valgrind warning

https://bugzilla.gnome.org/show_bug.cgi?id=666644